# fastapi-gemini-text-optimizer

./: .env.example  .gitignore  CLAUDE.md  README.md  USAGE.md  pyproject.toml  test_gemini.py
.claude/: settings.local.json
.github/workflows/: ci.yml
app/: config.py  main.py
app/data/: sample-complex-data.json  sample-optimized-data.json
app/routers/: products.py
app/schemas/: __init__.py  product.py
app/services/: __init__.py  gemini_service.py
